bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:3: error: ';' expected but ':' found.
  if(weekday==true || vacation==true){return:true;}
                                            ^